index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="box" style="background-color: white; display: none;">
                     <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section1.getBoundingClientRect().top, behavior: 'smooth'});">장영실을 아끼는 왕들</span>
                     <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section2.getBoundingClientRect().top, behavior: 'smooth'});">조선 최초의 혼천의</span>
-                    <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section3.getBoundingClientRect().top, behavior: 'smooth'});">양부일구</span>
+                    <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section3.getBoundingClientRect().top, behavior: 'smooth'});">앙부일구</span>
                     <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section4.getBoundingClientRect().top, behavior: 'smooth'});">자격루</span>
                     <span style="margin-left: 10px;" class="headee" onclick="window.scrollBy({top: section5.getBoundingClientRect().top, behavior: 'smooth'});type();">쫓겨나는 장영실</span>
                 </div>
@@ -67,7 +67,7 @@
         <div id="three" style="margin-top: 300px;"></div>
         <div class="p3">
             <div>
-                <p class="main_t">양부일구</p>
+                <p class="main_t">앙부일구</p>
                 <p>하늘을 바라보는 가마솥 해시계라는 뜻으로,</p><br>
                 <p>12지신으로 표시하여 백성들이 쉽게 시간을 읽을 수 있게 하였다.</p>
             </div>
